Dev fix: Dark mode BS5 select lists
DD-2662

--- a/css/common.scss
+++ b/css/common.scss
@@ -111,7 +111,6 @@ div.dtsb-searchBuilder {
                 margin-right: 0.8em;
                 min-width: 5em;
                 max-width: 20em;
-                background-color: rgb(238, 238, 238);
                 color: inherit;
                 
                 option.dtsb-notItalic {
